--- a/client/src/app/components/settings/application-settings/application-settings.component.html
+++ b/client/src/app/components/settings/application-settings/application-settings.component.html
@@ -17,7 +17,12 @@
 							</div>
 						</div>
 						<md-input-container class="md-input-full-width flex-item" fxFlex="96px">
-							<input mdInput placeholder="Milliseconds" type="number" (blur)="unsavedChagnes = true" [(ngModel)]="applicationSettings.TOKEN_EXPIRATION_TIME.value">
+							<input mdInput
+								placeholder="Milliseconds"
+								type="number"
+								(blur)="unsavedChanges = true"
+								(change)="changed()"
+								[(ngModel)]="applicationSettings.TOKEN_EXPIRATION_TIME.value">
 						</md-input-container>
 					</div>
 				</div>
@@ -39,7 +44,12 @@
 							</div>
 						</div>
 						<md-input-container class="md-input-full-width flex-item" fxFlex="64px">
-							<input mdInput placeholder="Length" type="number" min="1" [(ngModel)]="applicationSettings.USERNAME_MIN_LENGTH.value">
+							<input mdInput
+								placeholder="Length"
+								type="number"
+								min="1"
+								(change)="changed()"
+								[(ngModel)]="applicationSettings.USERNAME_MIN_LENGTH.value">
 						</md-input-container>
 					</div>
 					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
@@ -52,7 +62,12 @@
 							</div>
 						</div>
 						<md-input-container class="md-input-full-width flex-item" fxFlex="64px">
-							<input mdInput placeholder="Length" type="number" max="255" [(ngModel)]="applicationSettings.USERNAME_MAX_LENGTH.value">
+							<input mdInput 
+								placeholder="Length"
+								type="number"
+								max="255"
+								(change)="changed()"
+								[(ngModel)]="applicationSettings.USERNAME_MAX_LENGTH.value">
 						</md-input-container>
 					</div>
 					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
@@ -65,8 +80,12 @@
 							</div>
 						</div>
 						<md-input-container class="md-input-full-width flex-item" fxFlex="64px">
-							<input mdInput placeholder="Length" type="number" [(ngModel)]="applicationSettings.PASSWORD_MIN_LENGTH.value">
-						</md-input-container>
+							<input mdInput
+								placeholder="Length"
+								type="number"
+								min="1"
+								(change)="changed()"
+								[(ngModel)]="applicationSettings.PASSWORD_MIN_LENGTH.value">						</md-input-container>
 					</div>
 					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
 						<div class="flex-item" fxFlex="100">
@@ -78,8 +97,12 @@
 							</div>
 						</div>
 						<md-input-container class="md-input-full-width flex-item" fxFlex="64px">
-							<input mdInput placeholder="Length" placeholder="Length" type="number" [(ngModel)]="applicationSettings.PASSWORD_MAX_LENGTH.value">
-						</md-input-container>
+							<input mdInput 
+								placeholder="Length"
+								type="number"
+								max="255"
+								(change)="changed()"
+								[(ngModel)]="applicationSettings.PASSWORD_MAX_LENGTH.value">					</md-input-container>
 					</div>
 					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
 						<div class="flex-item" fxFlex="100">
@@ -90,7 +113,10 @@
 								Whether user account passwords require at least one non-alphanumeric character.
 							</div>
 						</div>
-						<md-slide-toggle [(ngModel)]="applicationSettings.PASSWORD_ENFORCE_SPECIAL_CHAR.value" class="flex-item" fxFlex="40px"></md-slide-toggle>
+						<md-slide-toggle [(ngModel)]="applicationSettings.PASSWORD_ENFORCE_SPECIAL_CHAR.value" 
+							(change)="changed()"
+							class="flex-item" 
+							fxFlex="40px"></md-slide-toggle>
 					</div>
 				</div>
 			</md-card-content>
